tests/syntax_tests/data/parsing/errors/structure/recordFieldKeywordInPattern2.res
let {a: _, type: x} = r
